# nsi-aura

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE.txt  README.md  aura.env  nsi_aura.py  nsi_comm.py  pyproject.toml
.github/workflows/: build-push-container.yml  test.yml
aura/: __init__.py  __main__.py  constant.py  db.py  dds.py  exception.py  form.py  forms.py  frontend.py  fsm.py  functional.py  job.py  log.py  model.py  models.py  nsi.py  nsi_aura.py  nsi_comm.py  route.py  routes.py  settings.py  state.py  util.py  utils.py  vlan.py
aura/frontend/: __init__.py  database.py  healthcheck.py  home.py  nsi.py  reservations.py  sdp.py  stp.py  util.py
certificates/: a384090e.0
chart/: Chart.yaml  my-values.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  hpa.yaml  httproute.yaml  ingress-api.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
chart/templates/tests/: test-connection.yaml
old/: nsi_aura.py  nsi_comm.py  route.py  state.py
static/: GenericAcknowledgement.xml  Provision.xml  QueryRecursive.xml  QuerySummarySync.xml  Release.xml  Reserve-for-SuPA.xml  Reserve.xml  ReserveAbort.xml  ReserveCommit.xml  ReserveTimeoutACK.xml  Terminate.xml
tests/: conftest.py  test_db.py  test_dds.py  test_exception.py  test_frontend_util.py  test_fsm.py  test_functional.py  test_job.py  test_log.py  test_model.py  test_nsi_http.py  test_nsi_xml.py  test_root_path.py  test_vlan.py
tests/data/: __init__.py  topology_samples.py
tests/frontend/: conftest.py  test_healthcheck.py
