[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nsi-aura"
version = "0.0.1"
dependencies = [
    "apscheduler",
    "fastapi[standard]",
    "fastui",
    "lxml",
    "pydantic-settings",
    "python-statemachine",
    "pytz",
    "requests",
    "sqlmodel",
    "structlog",
]
requires-python = ">=3.12"
authors = [
    {name = "Arno Bakker"},
    {name = "Hans Trompert"},
]
maintainers = [
    {name = "Arno Bakker"},
    {name = "Hans Trompert"},
]
description = "Network Service Interface (NSI) ultimate Requester Agent (uRA) for the Advanced North Atlantic (ANA) consortium"
readme = "README.md"
keywords = [
    "ANA",
    "NSI",
    "Python",
]
classifiers = [
]

license = {file = "LICENSE.txt"}

[tool.setuptools]
packages = ["aura"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "lxml-stubs",
    "mypy",
    "python-statemachine[diagrams]",
    "ruff",
    "types-pytz",
    "types-requests",
]

[project.urls]
# Homepage =
# Documentation =
Repository = "https://github.com/workfloworchestrator/nsi-aura.git"
# "Bug Tracker" =
# Changelog =

[project.scripts]

[project.gui-scripts]

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = [
    "ANN",
    "ARG",
    "B",
    "B",
    "C",
    "C",
    "D",
    "D",
    "E",
    "E",
    "F",
    "F",
    "I",
    "I",
    "N",
    "N",
    "PGH",
    "PTH",
    "Q",
    "RET",
    "RET",
    "RUF",
    "S",
    "S",
    "T",
    "T",
    "W",
    "W",
]
lint.ignore = [
    "B905",
    "C417",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "E501",
    "N801",
    "N802",
    "N803",
    "N805",
    "N806",
    "N815",
]

[tool.black]
line-length = 120
target-version = ["py313"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src/supa/grpc_nsi
    | build
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
forced_separate = "supa"
skip = ["venv", "static"]
profile = "black"

[tool.mypy]
plugins = ['pydantic.mypy']
